--- a/Módulo 2/Exercícios/EX022/fundo006.html
+++ b/Módulo 2/Exercícios/EX022/fundo006.html
@@ -4,20 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Documentos</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
             height: 100vh;
-            background-color: black;
+            /* background-color: black;
             background-image: url(imgs/wallpaper002.jpg);
             background-position: center top;
             background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed; */
+
+            /*
+                Shorthand - background
+                color > image > position > repeat > [size] > attachment
+                O size não funciona ainda.
+            */
+            background: black url(imgs/wallpaper002.jpg) center center no-repeat fixed;
             background-size: cover;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -28,6 +37,18 @@
 <body>
     <main>
         <h1>Teste de Imagem de fundo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, deserunt, ipsum magnam maxime molestias commodi ab quod natus animi, officia exercitationem repellendus temporibus ad! Numquam recusandae optio vel repudiandae sunt.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta omnis voluptatibus recusandae, earum dignissimos vitae iure nostrum necessitatibus, repudiandae mollitia laudantium possimus dolore facere! Facere sint voluptatem in explicabo vitae assumenda sed, cupiditate repudiandae reiciendis voluptate non, tempora ipsum porro? Expedita laborum tempore, est explicabo voluptas, officiis fugit iure rem maiores in, ad rerum praesentium.
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum ea tempora perspiciatis, vel non ut consequatur beatae minus tenetur et assumenda sapiente voluptate labore repudiandae aliquid rerum quae nihil totam sunt! Nam alias fugit sapiente aperiam autem, error assumenda labore dolorum iure eligendi! Quisquam!
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, deserunt, ipsum magnam maxime molestias commodi ab quod natus animi, officia exercitationem repellendus temporibus ad! Numquam recusandae optio vel repudiandae sunt.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta omnis voluptatibus recusandae, earum dignissimos vitae iure nostrum necessitatibus, repudiandae mollitia laudantium possimus dolore facere! Facere sint voluptatem in explicabo vitae assumenda sed, cupiditate repudiandae reiciendis voluptate non, tempora ipsum porro? Expedita laborum tempore, est explicabo voluptas, officiis fugit iure rem maiores in, ad rerum praesentium.
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum ea tempora perspiciatis, vel non ut consequatur beatae minus tenetur et assumenda sapiente voluptate labore repudiandae aliquid rerum quae nihil totam sunt! Nam alias fugit sapiente aperiam autem, error assumenda labore dolorum iure eligendi! Quisquam!
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, deserunt, ipsum magnam maxime molestias commodi ab quod natus animi, officia exercitationem repellendus temporibus ad! Numquam recusandae optio vel repudiandae sunt.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta omnis voluptatibus recusandae, earum dignissimos vitae iure nostrum necessitatibus, repudiandae mollitia laudantium possimus dolore facere! Facere sint voluptatem in explicabo vitae assumenda sed, cupiditate repudiandae reiciendis voluptate non, tempora ipsum porro? Expedita laborum tempore, est explicabo voluptas, officiis fugit iure rem maiores in, ad rerum praesentium.
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum ea tempora perspiciatis, vel non ut consequatur beatae minus tenetur et assumenda sapiente voluptate labore repudiandae aliquid rerum quae nihil totam sunt! Nam alias fugit sapiente aperiam autem, error assumenda labore dolorum iure eligendi! Quisquam!
+        </p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, deserunt, ipsum magnam maxime molestias commodi ab quod natus animi, officia exercitationem repellendus temporibus ad! Numquam recusandae optio vel repudiandae sunt.
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta omnis voluptatibus recusandae, earum dignissimos vitae iure nostrum necessitatibus, repudiandae mollitia laudantium possimus dolore facere! Facere sint voluptatem in explicabo vitae assumenda sed, cupiditate repudiandae reiciendis voluptate non, tempora ipsum porro? Expedita laborum tempore, est explicabo voluptas, officiis fugit iure rem maiores in, ad rerum praesentium.
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum ea tempora perspiciatis, vel non ut consequatur beatae minus tenetur et assumenda sapiente voluptate labore repudiandae aliquid rerum quae nihil totam sunt! Nam alias fugit sapiente aperiam autem, error assumenda labore dolorum iure eligendi! Quisquam!
